[gd_scene load_steps=30 format=3 uid="uid://b5e63667bvai4"]

[ext_resource type="VideoStream" uid="uid://dne462c6boo3x" path="res://player_lobby/lobby_screen_bg.ogv" id="1_j3h5w"]
[ext_resource type="Texture2D" uid="uid://bb1ctlrjckyj8" path="res://player_lobby/ffc_logo.png" id="2_hmeuf"]
[ext_resource type="Script" uid="uid://fnsxtd3k6nge" path="res://player_lobby/player_lobby.gd" id="2_hrceg"]
[ext_resource type="Theme" uid="uid://qw3ckwy7bak5" path="res://theme/ui_theme.tres" id="3_hrceg"]
[ext_resource type="Script" uid="uid://csi8nl60mj4yq" path="res://player_lobby/team_select.gd" id="4_hmeuf"]
[ext_resource type="Script" uid="uid://di0jpnawcxcxs" path="res://player_lobby/team_editor_btn.gd" id="4_q1g5o"]
[ext_resource type="Script" uid="uid://ikifc5i2mrdl" path="res://player_lobby/quit.gd" id="5_gcpix"]
[ext_resource type="Texture2D" uid="uid://clmis5rrdxbal" path="res://common_assets/wifi-icons/wifi.png" id="8_k3aj0"]
[ext_resource type="Script" uid="uid://d00vbqrgootmd" path="res://player_lobby/player_icons.gd" id="9_hrceg"]
[ext_resource type="Texture2D" uid="uid://bkq6uevdeu7ka" path="res://common_assets/copy.png" id="10_hrceg"]
[ext_resource type="Texture2D" uid="uid://clm1h7pg528ep" path="res://common_assets/copy_hover.png" id="11_q1g5o"]
[ext_resource type="Texture2D" uid="uid://dhqinoc2txy7e" path="res://common_assets/loading.png" id="12_gcpix"]
[ext_resource type="Script" uid="uid://ccp74qdnkf5ae" path="res://player_lobby/connecting.gd" id="13_qohhd"]

[sub_resource type="SystemFont" id="SystemFont_uvhto"]
font_names = PackedStringArray("Futura")
font_italic = true

[sub_resource type="LabelSettings" id="LabelSettings_5xqkb"]
line_spacing = 0.0
font = SubResource("SystemFont_uvhto")
font_size = 44
font_color = Color(0.9490196, 0.44313726, 0.15686275, 1)
stacked_outline_count = 1
stacked_outline_0/size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a1kh"]
content_margin_left = 10.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_q1g5o"]
font_names = PackedStringArray("Monospace")

[sub_resource type="SystemFont" id="SystemFont_gcpix"]
font_names = PackedStringArray("Monospace")
font_italic = true

[sub_resource type="AtlasTexture" id="AtlasTexture_qohhd"]
atlas = ExtResource("12_gcpix")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b45hg"]
atlas = ExtResource("12_gcpix")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3aj0"]
atlas = ExtResource("12_gcpix")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fye4s"]
atlas = ExtResource("12_gcpix")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfdgg"]
atlas = ExtResource("12_gcpix")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l27s"]
atlas = ExtResource("12_gcpix")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eqp2"]
atlas = ExtResource("12_gcpix")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra0c6"]
atlas = ExtResource("12_gcpix")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8nrr"]
atlas = ExtResource("12_gcpix")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5g0v"]
atlas = ExtResource("12_gcpix")
region = Rect2(432, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_eaq1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qohhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b45hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3aj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fye4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfdgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l27s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eqp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra0c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8nrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5g0v")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="PlayerLobby" type="VideoStreamPlayer"]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("1_j3h5w")
autoplay = true
expand = true
loop = true
script = ExtResource("2_hrceg")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(1, 1, 1, 0.7372549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 710.0
offset_right = 1210.0
offset_bottom = 1080.0
theme_override_constants/separation = 108
alignment = 1

[node name="Logo" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FFC logo" type="TextureRect" parent="VBoxContainer/Logo"]
layout_mode = 2
texture = ExtResource("2_hmeuf")
stretch_mode = 3

[node name="Simulator" type="Label" parent="VBoxContainer/Logo"]
layout_mode = 2
text = "Simulator"
label_settings = SubResource("LabelSettings_5xqkb")
horizontal_alignment = 1

[node name="FormatSelect" type="OptionButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Format (WIP)"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "S tier Reg 18"
popup/item_1/id = 1
popup/item_2/text = "A tier Reg 18"
popup/item_2/id = 2
popup/item_3/text = "B tier Reg 18"
popup/item_3/id = 3
popup/item_4/text = "C tier Reg 18"
popup/item_4/id = 4
popup/item_5/id = 6
popup/item_5/separator = true
popup/item_6/text = "Normal FFC rules"
popup/item_6/id = 5

[node name="TeamSelect" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Team"
popup/item_0/id = 0
popup/item_0/disabled = true
script = ExtResource("4_hmeuf")

[node name="DirectChallengeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hrceg")
disabled = true
text = "Direct Challenge"

[node name="TeamEditorBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hrceg")
text = "Team Editor"
script = ExtResource("4_q1g5o")

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_hrceg")
text = "Quit
"
script = ExtResource("5_gcpix")

[node name="PlayerIcons" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 80.0
offset_right = -118.0
offset_bottom = 146.0
grow_horizontal = 0
script = ExtResource("9_hrceg")

[node name="DisplayName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 240.0
offset_right = -110.0
offset_bottom = 282.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1a1kh")
placeholder_text = "Display Name"

[node name="ServerIP" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 331.0
offset_right = -110.0
offset_bottom = 373.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_1a1kh")
text = "54.92.223.204"
placeholder_text = "Server IP"

[node name="GoOnlineBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1504.0
offset_top = 430.0
offset_right = 1804.0
offset_bottom = 471.0
disabled = true
text = "Go Online!"
icon = ExtResource("8_k3aj0")
icon_alignment = 2
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -568.0
offset_top = 547.0
offset_right = -352.0
offset_bottom = 584.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_q1g5o")
theme_override_font_sizes/font_size = 36
text = "Player ID: "

[node name="PlayerID" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -143.0
offset_top = 547.0
offset_right = -103.0
offset_bottom = 564.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_gcpix")
theme_override_font_sizes/font_size = 36

[node name="CopyBtn" type="TextureButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -352.0
offset_top = 541.0
offset_right = 160.0
offset_bottom = 1053.0
grow_horizontal = 0
scale = Vector2(0.05, 0.05)
texture_normal = ExtResource("10_hrceg")
texture_pressed = ExtResource("10_hrceg")
texture_hover = ExtResource("11_q1g5o")

[node name="LoadingConn" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1455, 449)
sprite_frames = SubResource("SpriteFrames_eaq1v")
frame_progress = 0.51300097
script = ExtResource("13_qohhd")

[node name="WaitingChallenge" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(659, 631)
sprite_frames = SubResource("SpriteFrames_eaq1v")
frame_progress = 0.5773565
script = ExtResource("13_qohhd")

[node name="SendChallenge" type="PopupPanel" parent="."]
oversampling_override = 1.0
title = "Battle Form"
initial_position = 2
size = Vector2i(678, 200)

[node name="CenterContainer" type="CenterContainer" parent="SendChallenge"]
offset_left = 10.0
offset_top = 10.0
offset_right = 668.0
offset_bottom = 195.0

[node name="VBoxContainer" type="VBoxContainer" parent="SendChallenge/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="SendChallenge/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SendChallenge/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Opponent's Player ID: "

[node name="OpponentPlayerId" type="LineEdit" parent="SendChallenge/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "1234567890"

[node name="CenterContainer" type="CenterContainer" parent="SendChallenge/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SendChallengeBtn" type="Button" parent="SendChallenge/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
disabled = true
text = "Send Challenge!"

[node name="AcceptChallenge" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Battle Invitation"
initial_position = 2
size = Vector2i(500, 200)
theme = ExtResource("3_hrceg")
ok_button_text = "Accept"
dialog_text = "{Player} ({id}) challenges you to a Fossil Battle. Do accept??!"
dialog_autowrap = true
cancel_button_text = "Decline"

[connection signal="item_selected" from="VBoxContainer/TeamSelect" to="." method="_on_team_selected"]
[connection signal="pressed" from="VBoxContainer/DirectChallengeBtn" to="." method="_on_battle_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/TeamEditorBtn" to="VBoxContainer/TeamEditorBtn" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="VBoxContainer/QuitBtn" method="_on_pressed"]
[connection signal="pressed" from="GoOnlineBtn" to="." method="_on_go_online_btn_pressed"]
[connection signal="pressed" from="CopyBtn" to="." method="_on_copy_btn_pressed"]
[connection signal="text_changed" from="SendChallenge/CenterContainer/VBoxContainer/HBoxContainer/OpponentPlayerId" to="." method="_on_opponent_player_id_text_changed"]
[connection signal="pressed" from="SendChallenge/CenterContainer/VBoxContainer/CenterContainer/SendChallengeBtn" to="." method="_on_send_challenge_btn_pressed"]
[connection signal="canceled" from="AcceptChallenge" to="." method="_on_decline_challenge"]
[connection signal="confirmed" from="AcceptChallenge" to="." method="_on_accept_challenge"]
